--- a/themes/livly-1/style.css
+++ b/themes/livly-1/style.css
@@ -1,38 +1,56 @@
 #my-mastodon-widget {
-    width: 100%;
-    height: 100%;
+    background-image: url(./bg-flip.png);
+    background-repeat: no-repeat;
+    width: 180px;
+    height: 360px;
     border: #eee 1px solid;
     font-family: 'Latin Modern Roman', 'Times New Roman', serif, '宋体';
     font-size: 13px;
-    color: #343434;
+    color: #666;
     overflow: hidden;
     box-sizing: border-box;
     padding: 3px 0;
     margin: 0;
-    background: #fcfcfc;
 }
 #my-mastodon-widget #main {
+    padding: 0 3px;
     box-sizing: border-box;
-    padding: 3px 8px;
+    margin-left: 14px;
+    margin-right: 14px;
+    margin-top: 118px;
+    padding-bottom: 20px;
     overflow-y: scroll;
-    height: 100%;
+    height: 210px;
 }
+
 #my-mastodon-widget p {
     margin: 0;
 }
 #my-mastodon-widget a {
-    color: rgba(170, 0, 0, .5);
+    color: #89adb1;
 }
 #my-mastodon-widget ::-webkit-scrollbar {
   width: 7px;
   height: 7px;
 }
 #my-mastodon-widget ::-webkit-scrollbar-thumb {
-  background: #eee;
+  background: #fdfdfd;
+}
+#my-mastodon-widget .item::before {
+    content: "";
+    background-image: url(./icon.png);
+    background-repeat: no-repeat;
+    width: 17px;
+    height: 15px;
+    display: inline-block;
+    padding-right: 3px;
+    float: left;
 }
 #my-mastodon-widget .time {
-    color: #aaa;
-    padding-bottom: 5px;
+    color: #666;
+    padding-bottom: 2px;
+    border-bottom: 2px dotted #fff;
+    margin-bottom: 7px;
 }
 #my-mastodon-widget .images .image-wrapper {
     margin-left: 3px;
@@ -41,13 +59,15 @@
     width: 60px;
     height: 60px;
     overflow: hidden;
+    border: 1px solid #efefef;
 }
 #my-mastodon-widget .images img {
     min-width: 100%;
     min-height: 100%;
     max-width: 60px;
+    opacity: .8;
 }
 #my-mastodon-widget .emoji {
-    width: 18px;
+    width: 17px;
 }
 
