--- a/themes/livly-2/style.css
+++ b/themes/livly-2/style.css
@@ -1,38 +1,58 @@
 #my-mastodon-widget {
-    width: 100%;
-    height: 100%;
+    background-image: url(./bg.png);
+    background-repeat: no-repeat;
+    width: 180px;
+    height: 362px;
     border: #eee 1px solid;
     font-family: 'Latin Modern Roman', 'Times New Roman', serif, '宋体';
     font-size: 13px;
-    color: #343434;
+    color: #fdfdfd;
     overflow: hidden;
     box-sizing: border-box;
-    padding: 3px 0;
+    padding: 0;
     margin: 0;
-    background: #fcfcfc;
 }
 #my-mastodon-widget #main {
+    background: rgba(152,202,197,.65);
+    padding: 7px;
     box-sizing: border-box;
-    padding: 3px 8px;
+    margin-left: 12px;
+    margin-right: 12px;
+    margin-top: 118px;
+    padding-bottom: 20px;
     overflow-y: scroll;
-    height: 100%;
+    height: 225px;
 }
+
 #my-mastodon-widget p {
     margin: 0;
 }
 #my-mastodon-widget a {
-    color: rgba(170, 0, 0, .5);
+    color: #df8626;
 }
 #my-mastodon-widget ::-webkit-scrollbar {
   width: 7px;
   height: 7px;
 }
 #my-mastodon-widget ::-webkit-scrollbar-thumb {
-  background: #eee;
+  background: #9dcbc6;
+}
+#my-mastodon-widget .item::before {
+    content: "*";
+    font-size: 30px;
+    margin-top: -5px;
+    width: 17px;
+    height: 15px;
+    display: inline-block;
+    padding-right: 3px;
+    float: left;
+    color: #c3d8d6;
 }
 #my-mastodon-widget .time {
-    color: #aaa;
-    padding-bottom: 5px;
+    color: #eee;
+    padding-bottom: 2px;
+    border-bottom: 2px dotted #368e85;
+    margin-bottom: 7px;
 }
 #my-mastodon-widget .images .image-wrapper {
     margin-left: 3px;
@@ -41,13 +61,16 @@
     width: 60px;
     height: 60px;
     overflow: hidden;
+    border: 1px solid #c3d8d6;
 }
 #my-mastodon-widget .images img {
     min-width: 100%;
     min-height: 100%;
     max-width: 60px;
+    opacity: .8;
 }
 #my-mastodon-widget .emoji {
-    width: 18px;
+    width: 17px;
 }
+
 
