--- a/themes/livly-1/style.css
+++ b/themes/livly-1/style.css
@@ -12,7 +12,7 @@
     padding: 3px 0;
     margin: 0;
 }
-#my-mastodon-widget #main {
+#my-mastodon-widget .main {
     padding: 0 3px;
     box-sizing: border-box;
     margin-left: 14px;
