--- a/themes/livly-2/style.css
+++ b/themes/livly-2/style.css
@@ -12,7 +12,7 @@
     padding: 0;
     margin: 0;
 }
-#my-mastodon-widget #main {
+#my-mastodon-widget .main {
     background: rgba(152,202,197,.65);
     padding: 7px;
     box-sizing: border-box;
