doc: quick build themes

--- a/themes/livly-1/style.css
+++ b/themes/livly-1/style.css
@@ -1,59 +1,85 @@
 #my-mastodon-widget {
-    /*
-    background-image: url(./bg-flip.png);
-    background-repeat: no-repeat;
-    */
-    width: 180px;
-    height: 360px;
-    border: #eee 1px solid;
-    font-family: 'Latin Modern Roman', 'Times New Roman', serif, '宋体';
-    font-size: 13px;
     color: #666;
-    overflow: hidden;
-    box-sizing: border-box;
-    padding: 3px 0;
-    margin: 0;
     background: 
         linear-gradient(to right top,
           #b8d4d8 25%,
-          rgba(255,255,255,0) 25%
-          ) 0 0,
+          rgba(255,255,255,0) 25%) 0 0,
         linear-gradient(to left top,
           #b8d4d8 25%,
-          rgba(255,255,255,0) 25%
-          ) 0 0,
+          rgba(255,255,255,0) 25%) 0 0,
         linear-gradient(to right bottom,
           #b8d4d8 25%,
-          rgba(255,255,255,0) 25%
-          ) 0 0,
+          rgba(255,255,255,0) 25%) 0 0,
         linear-gradient(to left bottom,
           #b8d4d8 25%,
-          rgba(255,255,255,0) 25%
-          ) 0 0; 
-  background-size:  20px 40px;
-  background-color: #d9e4e8;
-  background-position: -10px 20px;
-  position: relative;
+          rgba(255,255,255,0) 25%) 0 0; 
+    background-color: #d9e4e8;
+    background-size:  20px 40px;
+    background-position: -10px 20px;
 }
-
 #my-mastodon-widget::before {
-    z-index: 2;
-    content: "";
     width: 100px;
     height: 120px;
-    position: absolute;
-    background: url('./head-s.png');
-    background-repeat: no-repeat;
+    background-image: url('./head-s.png');
     background-size: auto 120px;
     top: 0;
     right: 0;
 }
 #my-mastodon-widget::after {
     content: "Powered By Mastodon";
-    font-size: 12px;
-    text-align: center;
     color: #fff;
     text-shadow: 1px 1px 1px #7cadb4;
+}
+#my-mastodon-widget .main {
+    background-color: rgba(238,244,246, .62);
+}
+#my-mastodon-widget a {
+    color: #89adb1;
+}
+#my-mastodon-widget ::-webkit-scrollbar-thumb {
+    background: #fdfdfd;
+}
+#my-mastodon-widget .item::before {
+    background-image: url(./icon.png);
+    width: 17px;
+    height: 15px;
+}
+#my-mastodon-widget .time {
+    color: #666;
+    border-bottom: 2px dotted #fff;
+}
+#my-mastodon-widget .images .image-wrapper {
+    border: 1px solid #efefef;
+}
+
+
+/****************/
+
+#my-mastodon-widget {
+    /*
+    background-image: url(./bg-flip.png);
+    background-repeat: no-repeat;
+    */
+    width: 180px;
+    height: 360px;
+    font-family: 'Latin Modern Roman', 'Times New Roman', serif, '宋体';
+    font-size: 13px;
+    overflow: hidden;
+    box-sizing: border-box;
+    padding: 3px 0;
+    margin: 0;
+    position: relative;
+}
+
+#my-mastodon-widget::before {
+    z-index: 2;
+    content: "";
+    position: absolute;
+    background-repeat: no-repeat;
+}
+#my-mastodon-widget::after {
+    font-size: 12px;
+    text-align: center;
     width: 100%;
     display: block;
     margin-top: -7px;
@@ -65,7 +91,6 @@
     position: relative;
     box-sizing: content-box;
     overflow-y: scroll;
-    background-color: rgba(238,244,246, .62);
     border-radius: 30px;
     border: 12px solid transparent;
     border-top-width: 21px;
@@ -81,30 +106,19 @@
 #my-mastodon-widget p {
     margin: 0;
 }
-#my-mastodon-widget a {
-    color: #89adb1;
-}
 #my-mastodon-widget ::-webkit-scrollbar {
   width: 7px;
   height: 7px;
 }
-#my-mastodon-widget ::-webkit-scrollbar-thumb {
-  background: #fdfdfd;
-}
 #my-mastodon-widget .item::before {
     content: "";
-    background-image: url(./icon.png);
     background-repeat: no-repeat;
-    width: 17px;
-    height: 15px;
     display: inline-block;
-    padding-right: 3px;
+    margin-right: 3px;
     float: left;
 }
 #my-mastodon-widget .time {
-    color: #666;
     padding-bottom: 2px;
-    border-bottom: 2px dotted #fff;
     margin-bottom: 7px;
 }
 #my-mastodon-widget .images .image-wrapper {
@@ -114,7 +128,6 @@
     width: 60px;
     height: 60px;
     overflow: hidden;
-    border: 1px solid #efefef;
 }
 #my-mastodon-widget .images img {
     min-width: 100%;
